# salvotest

./: Cargo.toml
src/: google_auth_jwt.rs  main.rs
static/: default.css
templates/: logged.html  login.html
