[package]
name = "salvotest"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
jsonwebtoken = "9.2.0"
salvo = { version="0.65.2", features = ["anyhow", "jwt-auth", "serve-static"] }
serde = "1"
time = "0.3"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21.7"
askama = "0.12.1"
